# circle-api

./: Cargo.toml  README.md  circle-apis.json  justfile  patch.diff
.openapi-generator/: FILES
docs/: AccountConfiguration.md  AddressBookRecipient.md  AddressBookRecipientMetadata.md  AddressBookRecipientModifyRequest.md  AddressBookRecipientRequest.md  AddressObject.md  AddressesApi.md  ApplePayToken.md  ApplePayTokenEcHeader.md  ApplePayTokenHeader.md  ApplePayTokenRsaHeader.md  BadRequest.md  Balances.md  BalancesApi.md  BankAddress.md  BankAddressIbanSupported.md  BankAddressNonIban.md  BankDestination.md  BasicChargeback.md  BasicChargebackHistory.md  BillingDetails.md  BurnFeeNetAmount.md  BurnFeePaymentAmount.md  BurnFeePayoutAmount.md  BusinessAccountPayoutDestinationType.md  BusinessDeposit.md  BusinessDestinationRequest.md  BusinessGenerateAddressRequest.md  BusinessPayout.md  BusinessPayoutCreationRequest.md  BusinessPixAccountInstructionsResponse.md  BusinessRecipientAddressCreationRequest.md  BusinessRecipientAddressObject.md  BusinessTransferCreationRequest.md  CancelCreationRequest.md  CancelPaymentResponse.md  CancelRefundReversalStatus.md  CaptureCreationRequest.md  Card.md  CardCreationRequest.md  (+255 more)
src/apis/: addresses_api.rs  balances_api.rs  cards_api.rs  cbit_api.rs  channels_api.rs  chargebacks_api.rs  checkout_sessions_api.rs  configuration.rs  crypto_address_book_api.rs  crypto_exchange_rates_api.rs  crypto_payment_intents_api.rs  deposits_api.rs  encryption_api.rs  health_api.rs  management_api.rs  mod.rs  payment_tokens_api.rs  payments_api.rs  (+9 more)
(+271 files in other folders)
